# The-Tangled-Tree

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/agents/: agent-belenos.md
.github/workflows/: ci.yml
crates/tangled_app/: Cargo.toml
crates/tangled_app/src/: main.rs
crates/tangled_bevy/: Cargo.toml
crates/tangled_bevy/src/: lib.rs
crates/tangled_bevy/src/adapters/: mod.rs
crates/tangled_bevy/src/adapters/renderer/: creature_renderer.rs  mod.rs  tilemap_renderer.rs  tree_renderer.rs
crates/tangled_bevy/src/adapters/stats_reporter/: mod.rs
crates/tangled_bevy/src/adapters/world_generator/: mod.rs  perlin_generator.rs
crates/tangled_bevy/src/plugins/: mod.rs  simulation_plugin.rs  tangled_plugin.rs
crates/tangled_bevy/src/plugins/camera/: camera_plugin.rs  mod.rs
crates/tangled_core/: Cargo.toml
crates/tangled_core/src/: lib.rs
crates/tangled_core/src/domain/: mod.rs
crates/tangled_core/src/domain/creatures/: creature.rs  mod.rs  spawner.rs
crates/tangled_core/src/domain/genetics/: allele_pair.rs  diet.rs  gene.rs  genome.rs  mod.rs  rng.rs  scalar_genes.rs
crates/tangled_core/src/domain/simulation/: mod.rs  movement.rs  tick.rs
crates/tangled_core/src/domain/world/: fruit_tree.rs  mod.rs  terrain.rs  tile.rs  world_config.rs  world_map.rs  world_position.rs
crates/tangled_core/src/ports/: mod.rs
crates/tangled_core/src/ports/inbound/: mod.rs
crates/tangled_core/src/ports/outbound/: mod.rs  world_generator.rs
crates/tangled_persistence/: Cargo.toml
crates/tangled_persistence/src/: lib.rs
crates/tangled_persistence/src/adapters/: mod.rs
crates/tangled_persistence/src/adapters/file_persistence/: mod.rs
docs/adr/: 001-hexagonal-architecture.md  README.md
