[package]
name = "tangled_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure domain logic for The Tangled Tree — genetics, simulation, world generation"

[dependencies]
# tangled_core has ZERO external dependencies by design (hexagonal architecture)
# Only stdlib types are allowed here

[dev-dependencies]
# Test-only deps are acceptable
